<resources>
    <string name="aboutFeedbackCategoryTitle">"Feedback"</string>
    <string name="aboutIssuesSummary">"File on GitHub"</string>
    <string name="aboutIssuesTitle">"Report an issue"</string>
    <string name="aboutLicense">"License"</string>
    <string name="aboutSourceCodeSummary">"on GitHub"</string>
    <string name="aboutTranslations">"Help translate this app"</string>
    <plurals name="aboutTranslationsSummary">
        <item quantity="one">"Currently available in %1$d language!"</item>
        <item quantity="other">"Currently available in %1$d languages!"</item>
    </plurals>
    <string name="accept">"Accept"</string>
    <string name="addWaypoint">"Add waypoint"</string>
    <string name="aLocation">"a region"</string>
    <string name="app_name">"OwnTracks"</string>
    <string name="backgroundLocationPermissionRequestDialogText">"If you'd like OwnTracks to collect location data even when it's running in the background, an additional permission is needed to allow OwnTracks to receive locations \"all the time\"."</string>
    <string name="backgroundLocationPermissionRequestDialogTitle">"Background Location Permission"</string>
    <string name="backgroundLocationRestrictionNotificationText">"This version of Android restricts OwnTracks from receiving locations when started in the background until the app is opened. Click this notification to open the app and start tracking location."</string>
    <string name="backgroundLocationRestrictionNotificationTitle">"Location Tracking Paused"</string>
    <string name="batteryOptimizationWhitelistDialogButtonLabel">"Battery optimization settings"</string>
    <string name="batteryOptimizationWhitelistDialogMessage">"Whitelisting OwnTracks from battery optimization may help it more reliably track locations and maintain contact with the server."</string>
    <string name="batteryOptimizationWhitelistDialogTitle">"Battery Optimization"</string>
    <string name="cancel">"Cancel"</string>
    <string name="certificateMigrationRequiredOpenSettingsAction">"Open Settings"</string>
    <string name="certificateMigrationRequiredNotificationText">"OwnTracks now uses TLS certificates from the device certificate store.\n\nIf you were using either a custom CA or TLS client certificates, please add these to the device certificate store."</string>
    <string name="certificateMigrationRequiredNotificationTitle">"Certificate Migration Required"</string>
    <string name="chargingSourceCable">"Cable"</string>
    <string name="chargingSourceDock">"Dock"</string>
    <string name="chargingSourceWireless">"Wireless charger"</string>
    <string name="clear_log">"Clear"</string>
    <string name="configurationManagement">"Configuration management"</string>
    <string name="CONNECTED">"Connected"</string>
    <string name="CONNECTING">"Connecting"</string>
    <string name="contact_image">"Contact Image"</string>
    <string name="contactDetailsAccuracy">"Accuracy"</string>
    <string name="contactDetailsAccuracyValue">"%,d m"</string>
    <string name="contactDetailsAltitude">"Altitude"</string>
    <string name="contactDetailsAltitudeValue">"%,d m"</string>
    <string name="contactDetailsBattery">"Battery"</string>
    <string name="contactDetailsBatteryValue">"%d %%"</string>
    <string name="contactDetailsBearing">"Bearing"</string>
    <string name="contactDetailsBearingValue">"%,.0f°"</string>
    <string name="contactDetailsCoordinates">"Coordinates"</string>
    <string name="contactDetailsDistance">"Distance"</string>
    <string name="contactDetailsDistanceUnitKilometres">"km"</string>
    <string name="contactDetailsDistanceUnitMeters">"m"</string>
    <string name="contactDetailsDistanceValue">"%1$,.2f %2$s"</string>
    <string name="contactDetailsSpeed">"Speed"</string>
    <string name="contactDetailsSpeedValue">"%d kph"</string>
    <string name="contactDetailsTopic">"Identifier"</string>
    <string name="contactDetailsTrackerId">"Tracker ID"</string>
    <string name="contactLocationUnknown">"No location is available"</string>
    <string name="contactsListPlaceholder">"No contacts found"</string>
    <string name="contextProfileConditionAnyWifi">"Connected to any Wi-Fi network"</string>
    <string name="contextProfileConditionBluetooth">"Connected to Bluetooth device %1$s"</string>
    <string name="contextProfileConditionBluetoothPermissionDenied">"Permission to see Bluetooth devices is needed to choose one"</string>
    <string name="contextProfileConditionCharging">"Charging"</string>
    <string name="contextProfileConditionChargingFrom">"Charging from: %1$s"</string>
    <string name="contextProfileConditionNoBluetoothDevices">"There are no paired Bluetooth devices"</string>
    <string name="done_heading">"Done"</string>
    <string name="enjoy_description">"Select preferences from the menu (or use the link below) and configure OwnTracks for your server before using it"</string>
    <string name="icon_description_done">"Done"</string>
    <string name="preferencesAdvanced">"Advanced"</string>
    <string name="preferencesAllowIntentControl">"Allow intent control"</string>
    <string name="preferencesAllowIntentControlSummary">"Allow external apps (e.g. Tasker) to trigger location publishes and change monitoring mode via intents. Make sure to send the intent auth key (below) in the intent extra data."</string>
    <string name="preferencesContextProfileAddCondition">"Add condition"</string>
    <string name="preferencesContextProfileCategoryOverrides">"Use these settings"</string>
    <string name="preferencesContextProfileDelete">"Delete profile"</string>
    <string name="preferencesContextProfileEnabled">"Enabled"</string>
    <string name="preferencesContextProfilesStatus">"Active profile"</string>
    <string name="preferencesContextProfileStaticLocation">"Static location"</string>
    <string name="preferencesContextProfileMatch">"Apply this profile when"</string>
    <string name="preferencesContextProfileName">"Name"</string>
    <string name="preferencesContextProfilePing">"Location ping interval (minutes)"</string>
    <string name="preferencesContextProfiles">"Context profiles"</string>
    <string name="preferencesContextProfilesAdd">"Add profile"</string>
    <string name="preferencesContextProfilesCategory">"Profiles"</string>
    <string name="preferencesContextProfilesCategorySummary">"The first enabled profile that applies is used"</string>
    <string name="preferencesContextProfilesEnabled">"Use context profiles"</string>
    <string name="preferencesContextProfilesEnabledSummary">"Change location settings automatically, depending on Wi-Fi, Bluetooth, charging and regions"</string>
    <string name="preferencesIntentAuthKey">"Intent auth key"</string>
    <string name="preferencesIntentAuthKeySummary">"Include this value in the intent extras of apps you want to allow intent control"</string>
    <string name="preferencesAllowConfigurationByURIAndConfigFile">"Allow external configuration"</string>
    <string name="preferencesAllowConfigurationByURIAndConfigFileSummary">"Allow loading configuration from owntracks: scheme URIs and config files"</string>
    <string name="preferencesLocatorPriority">"Locator priority"</string>
    <string name="preferencesMonitoring">"Monitoring mode"</string>
    <string name="preferencesCategoryNotificationBackground">"Background notifications"</string>
    <string name="preferencesCategoryNotificationErrors">"Errors &amp; Issues"</string>
    <string name="preferencesCategoryNotificationOngoing">"Ongoing notification"</string>
    <string name="preferencesCategoryRemoteControlDevice">"From Device"</string>
    <string name="preferencesCategoryRemoteControlEndpoint">"From Endpoint"</string>
    <string name="preferencesClientId">"Client ID"</string>
    <string name="preferencesEditorDescription">"Set a single value for the specified key. Some changes might require an restart of the app."</string>
    <string name="preferencesEditorKey">"Key"</string>
    <string name="preferencesEditorValue">"Value"</string>
    <string name="preferencesEnableMapRotation">"Enable Map Rotation"</string>
    <string name="preferencesEnableMapRotationSummary">"Allow the map to be rotated"</string>
    <string name="preferencesExperimental">"Experimental"</string>
    <string name="preferencesHost">"Host"</string>
    <string name="preferencesLocatorDisplacement">"Minimal location displacement"</string>
    <string name="preferencesLocatorDisplacementDialog">"How far should the device travel (in metres) before receiving another location"</string>
    <string name="preferencesLocatorInterval">"Location interval"</string>
    <string name="preferencesLocatorIntervalDialog">"How often should locations be requested from the device (seconds)"</string>
    <string name="preferencesMap">"Map"</string>
    <string name="preferencesMoveModeLocatorInterval">"Location interval (Move mode)"</string>
    <string name="preferencesMoveModeLocatorIntervalDialog">"How often should locations be requested from the device whilst in Move mode (seconds)"</string>
    <string name="preferencesNotification">"Notifications"</string>
    <string name="preferencesNotificationEvents">"Events"</string>
    <string name="preferencesNotificationEventsSummary">"Notify about received events"</string>
    <string name="preferencesNotificationGeocoderErrors">"Geocoder errors"</string>
    <string name="preferencesNotificationGeocoderErrorsSummary">"Display geocoder errors, rate limits &amp; quota exceeded events"</string>
    <string name="preferencesNotificationLocation">"Last reported location"</string>
    <string name="preferencesNotificationLocationSummary">"Display last reported location and time"</string>
    <string name="preferencesPort">"Port"</string>
    <string name="preferencesRemoteControl">"Remote Control"</string>
    <string name="preferencesRemoteCommand">"Remote commands"</string>
    <string name="preferencesRemoteCommandSummary">"Enable remote commands"</string>
    <string name="preferencesRemoteConfiguration">"Remote configuration"</string>
    <string name="preferencesRemoteConfigurationSummary">"Enable configuration to be updated remotely (requires remote commands)"</string>
    <string name="preferencesReporting">"Reporting"</string>
    <string name="preferencesServer">"Connection"</string>
    <string name="preferencesShowWaypointsOnMap">"Show Waypoints"</string>
    <string name="preferencesShowWaypointsOnMapSummary">"Draw waypoint circles on the map"</string>
    <string name="preferencesTheme">"Theme"</string>
    <string name="preferencesWebsocket">"Use WebSockets"</string>
    <string name="title_activity_about">"About"</string>
    <string name="title_activity_contacts">"Friends"</string>
    <string name="title_activity_map">"Map"</string>
    <string name="title_activity_preferences">"Preferences"</string>
    <string name="title_activity_waypoints">"Waypoints"</string>
    <string name="title_activity_status">"Status"</string>
    <string name="title_exit">"Exit app"</string>
    <string name="welcome_background_location_permission_request">"Request Background Permission"</string>
    <string name="welcome_location_permission_title">"Location permissions"</string>
    <string name="welcome_location_permission_description">"In order to receive your current location to send to your OwnTracks endpoint, OwnTracks needs your permission in order to access your device's location.

You can review this permission from the Status page.

Background location permission may improve the frequency and reliability of location data, depending on your device and configuration."</string>
    <string name="welcome_location_permission_granted">"Location permissions granted"</string>
    <string name="welcome_location_permission_request">"Request Permission"</string>
</resources>