<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:title="@string/preferencesNotification">
    <androidx.preference.PreferenceCategory app:title="@string/preferencesCategoryNotificationOngoing">
        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="@bool/valNotificationLocation"
            app:key="@string/preferenceKeyNotificationLocation"
            app:summary="@string/preferencesNotificationLocationSummary"
            app:title="@string/preferencesNotificationLocation" />
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory app:title="@string/preferencesCategoryNotificationBackground">
        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="@bool/valNotificationEvents"
            app:key="@string/preferenceKeyNotificationEvents"
            app:summary="@string/preferencesNotificationEventsSummary"
            app:title="@string/preferencesNotificationEvents" />
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory app:title="@string/preferencesCategoryNotificationErrors">
        <SwitchPreferenceCompat
            android:defaultValue="@bool/valNotificationGeocoderErrors"
            app:key="@string/preferenceKeyNotificationGeocoderErrors"
            app:summary="@string/preferencesNotificationGeocoderErrorsSummary"
            app:title="@string/preferencesNotificationGeocoderErrors" />
    </androidx.preference.PreferenceCategory>
</PreferenceScreen>