<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    app:key="root"
    app:title="@string/title_activity_preferences">
    <IntListPreference
        app:defaultValue="@integer/defaultTheme"
        app:entries="@array/themeLabels"
        app:entryValues="@array/themeValues"
        app:icon="@drawable/ic_baseline_palette_24"
        app:key="@string/preferenceKeyTheme"
        app:title="@string/preferencesTheme"
        app:useSimpleSummaryProvider="true" />
    <Preference
        app:fragment="org.owntracks.android.ui.preferences.connection.ConnectionFragment"
        app:icon="@drawable/ic_baseline_settings_ethernet_24"
        app:key="connectionScreen"
        app:title="@string/preferencesServer" />
    <Preference
        app:fragment="org.owntracks.android.ui.preferences.ReportingFragment"
        app:icon="@drawable/ic_baseline_send_24"
        app:key="reportingScreen"
        app:title="@string/preferencesReporting" />
    <Preference
        app:fragment="org.owntracks.android.ui.preferences.NotificationFragment"
        app:icon="@drawable/ic_baseline_notifications_24"
        app:key="notificationScreen"
        app:title="@string/preferencesNotification" />
    <Preference
        app:fragment="org.owntracks.android.ui.preferences.AdvancedFragment"
        app:key="advancedScreen"
        app:title="@string/preferencesAdvanced" />
    <Preference
        app:fragment="org.owntracks.android.ui.preferences.ExperimentalFragment"
        app:key="experimentalFeatures"
        app:title="@string/preferencesExperimental" />
    <Preference
        app:icon="@drawable/ic_baseline_edit_24"
        app:key="configuration"
        app:title="@string/configurationManagement" />
</PreferenceScreen>