<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/top_menu_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_baseline_layers_24"
            android:title="@string/title_activity_map" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_baseline_supervisor_account_24"
            android:title="@string/title_activity_contacts" />
        <item
            android:id="@+id/nav_waypoints"
            android:icon="@drawable/ic_baseline_adjust_24"
            android:title="@string/title_activity_waypoints" />
    </group>

    <group
        android:id="@+id/bottom_menu_group"
        android:layout_width="match_parent"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_status"
            android:icon="@drawable/ic_baseline_beenhere_24"
            android:title="@string/title_activity_status" />
        <item
            android:id="@+id/nav_preferences"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/title_activity_preferences" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/title_activity_about" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_baseline_power_settings_new_24"
            android:title="@string/title_exit" />
    </group>
</menu>
