<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    app:title="@string/preferencesMap">

    <androidx.preference.SwitchPreferenceCompat
        app:iconSpaceReserved="false"
        app:key="showRegionsOnMap"
        app:summary="@string/preferencesShowWaypointsOnMapSummary"
        app:title="@string/preferencesShowWaypointsOnMap" />

    <androidx.preference.SwitchPreferenceCompat
        app:iconSpaceReserved="false"
        app:key="enableMapRotation"
        app:summary="@string/preferencesEnableMapRotationSummary"
        app:title="@string/preferencesEnableMapRotation" />

    <androidx.preference.ListPreference
        app:entries="@array/unitsDisplayLabels"
        app:entryValues="@array/unitsDisplayValues"
        app:iconSpaceReserved="false"
        app:key="imperialUnitsDisplay"
        app:summary="@string/preferencesUnitsDisplaySummary"
        app:title="@string/preferencesUnitsDisplay"
        app:useSimpleSummaryProvider="true" />

</PreferenceScreen>
