<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:id="@+id/content_frame"
        style="@style/DialogView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/preferencesHost">

            <org.owntracks.android.ui.preferences.ValidatingEditText
                android:id="@+id/host"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:inputType="textVisiblePassword|textNoSuggestions" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/preferencesPort">

            <org.owntracks.android.ui.preferences.ValidatingEditText
                android:id="@+id/port"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"

                android:inputType="number|textNoSuggestions"
                android:maxLength="5" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/preferencesClientId">

            <org.owntracks.android.ui.preferences.ValidatingEditText
                android:id="@+id/clientId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:inputType="textNoSuggestions" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/ws"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/preferencesWebsocket" />


    </LinearLayout>
</layout>