<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/DialogView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/preferencesEditorDescription" />

    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_spacing"
        android:hint="@string/preferencesEditorKey">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/inputKey"
            style="@style/Widget.MaterialComponents.AutoCompleteTextView.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:completionThreshold="1"
            android:inputType="textUri|textNoSuggestions" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_spacing"
        android:hint="@string/preferencesEditorValue">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri|textNoSuggestions" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>
