<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="org.owntracks.android.App" />
    </data>

    <RelativeLayout

        android:id="@+id/welcome_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false">

        <ImageView
            android:id="@+id/img"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="48dp"
            android:contentDescription="@string/icon_description_done"
            android:scaleType="fitXY"
            android:src="@drawable/ic_baseline_done_all_24" />

        <TextView
            android:id="@+id/screen_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img"
            android:layout_marginBottom="8dp"
            android:gravity="bottom|center_horizontal"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/done_heading"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/screen_desc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/screen_heading"
            android:layout_alignStart="@+id/screen_heading"
            android:gravity="top|center_horizontal"
            android:minHeight="@dimen/welcome_content_min_height"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/enjoy_description"
            android:textSize="16sp" />

    </RelativeLayout>
</layout>